tests/purs/failing/ProgrammableTypeErrorsTypeString.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ProgrammableTypeErrorsTypeString.purs:24:9 - 24:24 (line 24, column 9 - line 24, column 24)

  A custom type error occurred while solving type class constraints:

    Don't want to show MyType Int because.


while solving type class constraint
[33m                             [0m
[33m  Data.Show.Show (MyType Int)[0m
[33m                             [0m
while applying a function [33mshow[0m
  of type [33mShow t0 => t0 -> String[0m
  to argument [33mMyType 2[0m
while checking that expression [33mshow (MyType 2)[0m
  has type [33mString[0m
in value declaration [33mmain[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

